Add task to run all unit tests