@@ -26,6 +26,25 @@ internal fun Project.configureKotlinAndroid(commonExtension: CommonExtension) {
 
         configureKotlin()
     }
+
+    configureUnitTestJvmArgs(commonExtension)
+}
+
+private fun Project.configureUnitTestJvmArgs(commonExtension: CommonExtension) {
+    // Robolectric requires these to access internal OpenJDK classes when running on Java 17+.
+    commonExtension.testOptions.unitTests.all {
+        it.jvmArgs(
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                "--add-opens=java.base/java.net=ALL-UNNAMED",
+                "--add-opens=java.base/java.security=ALL-UNNAMED",
+                "--add-opens=java.base/java.text=ALL-UNNAMED",
+                "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        )
+    }
 }
 
 private fun Project.configureKotlin() {
